syntax = "proto3";
import "image.proto";
package pb;

option go_package = "pb/";

message GetUserByIdReq {
  int32 id = 1;
}

message GetUsersByIdsReq {
  repeated int32 ids = 1;
}

message CreateUserReq {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message NewUserIdResp {
  int32 id = 1;
}

message PublicUserInfo {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string user_name = 4;
  string display_name = 5;
  string system_role = 6;
  Image avatar = 7;
}

message PublicUserInfoResp {
  PublicUserInfo user = 1;
}

message PublicUsersInfoResp {
  repeated PublicUserInfo users = 1;
}


message GetUserRoleReq {
  int32 id = 1;
}

message GetUserRoleReps {
  string role = 1;
}


service UserService {
  rpc CreateUser(CreateUserReq) returns (NewUserIdResp);
  rpc GetUserRole(GetUserRoleReq) returns (GetUserRoleReps);
  rpc GetUserById(GetUserByIdReq) returns (PublicUserInfoResp);
  rpc GetUsersByIds(GetUsersByIdsReq) returns (PublicUsersInfoResp);
}